--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1"
+  },
+  "scripts": {
+    "start": "node backend/server.js"
   }
 }
